Move Jekyll from /docs to root directory

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ _site/
 .sass-cache/
 .jekyll-cache/
 .jekyll-metadata
+vendor
 
 # End of https://www.toptal.com/developers/gitignore/api/jekyll
 
